--- a/Fantacalcio2011/.classpath
+++ b/Fantacalcio2011/.classpath
@@ -2,16 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" output="test-classes" path="test"/>
-	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT (3)"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-3.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/jxl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Utente/git/Fantaenrico/Fantacalcio2011/war/WEB-INF/lib/jxl.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/Applications/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.5.5.r35v201110112027/appengine-java-sdk-1.5.5/lib/impl/appengine-api-labs.jar"/>
-	<classpathentry kind="lib" path="/Applications/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.5.5.r35v201110112027/appengine-java-sdk-1.5.5/lib/impl/appengine-api-stubs.jar"/>
-	<classpathentry kind="lib" path="/Applications/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.5.5.r35v201110112027/appengine-java-sdk-1.5.5/lib/impl/appengine-api.jar"/>
-	<classpathentry kind="lib" path="/Applications/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.5.5.r35v201110112027/appengine-java-sdk-1.5.5/lib/testing/appengine-testing.jar"/>
-	<classpathentry kind="lib" path="/Library/PostgreSQL/pgJDBC/postgresql-9.0-801.jdbc4.jar"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
+	<classpathentry kind="con" path="DERBY_CONTAINER"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
